fixed color of bullets and added spacing, added word-break: break-all to css blog body

--- a/static/style.css
+++ b/static/style.css
@@ -21,7 +21,7 @@ body,html {
 
 .navigation li a{
     display: block;
-    color: antiquewhite;
+   color: rgb(219, 196, 233);
     font-family: sans-serif;
     text-align: center;
     padding: 20px 20px;
@@ -50,9 +50,20 @@ h1{
     text-align: center;
     color: hotpink;
 }
-.points{
+.allposts, a:link, a:visited{
     color: rgb(117, 16, 211);
     font-family: Georgia, serif;
+}
+#authorbullet{
+     color: rgb(155, 72, 233);
+}
+
+.allposts li{
+    padding: 4px;
+}
+
+.line{
+    border-right: 2px solid #111;
 }
 
 .error{ 
@@ -85,6 +96,7 @@ body{
     padding-bottom: 1%;
     padding-right: 2%;
     padding-left: 2%; 
+    word-break:break-all;
 }
 
 .author{
